# LiveO

./: .gitignore  CLAUDE.md  design.md  pyproject.toml  ralph_plan.md
.claude/: settings.json
.omx/: metrics.json  tmux-hook.json
.omx/logs/: tmux-hook-2026-03-28.jsonl  tmux-hook-2026-03-29.jsonl  turns-2026-03-28.jsonl  turns-2026-03-29.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
apps/live_server/: events.py
backend/: README.md  __main__.py  capture.py  clip_editor.py  debug.py  events.py  highlight_aggregator.py  models.py  pipeline.py  ring_buffer.py  server.py  stt.py  test_stream.py  transcript.py  vad.py  ws_manager.py
backend/detectors/: __init__.py  audio_excitement.py  gemini.py  keyword.py  killfeed_ocr.py
backend/docs/: backend.md  editing.md  streaming.md  transcript.md
docs/: LIVE_SERVER.md  PRD.md  Transcript.md  backend.md  indicator.md
frontend/: README.md  indicator.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  mock-data.ts  types.ts  use-liveo.ts  use-websocket.ts  utils.ts
resources/: thumbnail-references.md
scripts/: check-prereqs.sh
tests/: conftest.py  test_capture.py  test_events.py  test_pipeline.py  test_ring_buffer.py  test_server.py  test_stt.py  test_transcriber.py  test_transcript.py  test_vad.py
tests/api/: conftest.py  test_candidates_api.py  test_generation_api.py  test_settings_api.py  test_stream_api.py  test_testmode_api.py  test_websocket.py
tests/integration/: conftest.py  (+1 more)
(+33 files in other folders)
