[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liveo"
version = "0.1.0"
description = "Live streaming highlight extraction platform"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
