[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liveo"
version = "0.1.0"
description = "Live streaming highlight extraction platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
]

[project.optional-dependencies]
stt = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "faster-whisper>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
